tests/correct/pass.py
while(True):
  pass
  print "True"
  break
