tests/error/func_bad.py
def foo():
  if True:
    def bar():
      pass

